big refactor, and of course new features. not fully fixed yet
