# api/__init__.py
@@ -19,5 +19,8 @@
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
+import api.admin
 import api.group
 import api.user
+import api.service
+
