# app.py
@@ -23,10 +23,14 @@ import logging
 
 import connexion
 from flask_cors import CORS
+from sqlalchemy.exc import SQLAlchemyError
 
 from auth import NoAuth
+from auth.access_secret import AccessSecretToken
 from auth.ldap import LDAP
-from db.handler import init_db
+from db.group import Group
+from db.handler import init_db, db_session
+from db.service import Service
 
 
 class AccountRestService(object):
@@ -34,6 +38,7 @@ class AccountRestService(object):
     logger = logging.getLogger(__name__)
 
     auth = None
+    service_auth = None
     config = None
 
     def __init__(self, config, auth=True, direct=False):
@@ -43,32 +48,54 @@ class AccountRestService(object):
         :param auth: enable/disable authorization
         :param direct: direct start API (don't use Gunicorn)
         """
-        self.config = config
+        AccountRestService.config = config
         self.direct = direct
         self.logger.debug("initializing database")
-        init_db(self.config.database().get('connection'))
+        session = init_db(self.config.database().get('connection'))
         if direct:
             self.logger.info("direct initialization requested")
             self.app = connexion.FlaskApp(__name__, specification_dir='swagger/')
         else:
             self.logger.info("initializing gunicorn application")
-            self.app = connexion.FlaskApp(__name__,
-                                          port=self.config.general.get('port'),
-                                          specification_dir='swagger/',
-                                          server='gunicorn')
+            self.app = connexion.FlaskApp(__name__, port=self.config.general.get('port'), specification_dir='swagger/', server='gunicorn')
         self.app.app.secret_key = self.config.general().get('secret')
-        if auth and self.config.general().get('auth'):
-            self.logger.info("initializing LDAP authorization")
-            login_path = 'login'
-            self.app.app.config['LDAP_LOGIN_PATH'] = login_path
-            AccountRestService.auth = LDAP(self.app.app, self.config)
-            self.app.app.add_url_rule("/{0}".format(login_path),
-                                      login_path,
-                                      AccountRestService.auth.login,
-                                      methods=['POST'])
+        # primary authentication tables
+        try:
+            s = session.query(Service)
+            if not s.filter(Service.name == 'admin').one_or_none():
+                admin_service = Service(name='admin', access=config.admin().get('access'), secret=config.admin().get('secret'))
+                session.add(admin_service)
+                session.commit()
+        except SQLAlchemyError:
+            self.logger.exception('failed to add admin service')
+        try:
+            g = session.query(Group)
+            if not g.filter(Group.name == 'admins').one_or_none():
+                admin_group = Group(name='admins', active=True)
+                session.add(admin_group)
+                session.commit()
+        except SQLAlchemyError:
+            self.logger.exception('failed to add admin group')
+        if auth:
+            # add service authentication
+            AccountRestService.service_auth = AccessSecretToken(self.config)
+            self.app.app.add_url_rule('/service', 'service', AccountRestService.service_auth.authorize(), methods=['POST'])
+
+            if self.config.general().get('auth'):
+                # self.logger.info("initializing LDAP authorization")
+                # login_path = 'login'
+                # self.app.app.config['LDAP_LOGIN_PATH'] = login_path
+                # AccountRestService.auth = LDAP(self.app.app, self.config)
+                # self.app.app.add_url_rule("/{0}".format(login_path),
+                #                           login_path,
+                #                           AccountRestService.auth.login,
+                #                           methods=['POST'])
+                pass
+
         else:
             self.logger.warning("authorization disabled")
             AccountRestService.auth = NoAuth()
+            AccountRestService.service_auth = NoAuth()
         self.logger.debug("initializing routes")
         self.app.add_api('api.yaml')
         if self.config.general().get('CORS'):
